K8S/platforms-depl.yaml
# white space sensitive!
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-depl
spec:
  replicas: 1 # (horizontally) number of 'platform service'
  selector: # selecting template that we create
    matchLabels:
      app: platformservice
  template: # defining pod and container that we are going to use 'what we are deploying'
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice # - : for specifying array
          image: bbb3/platformservice:latest

# deployment for a container into a pod.
