K8S/commands-depl.yaml
# deployment for a container into a pod.  
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands-depl
spec:
  replicas: 1 # (horizontally) number of 'platform service'
  selector: # selecting template that we create
    matchLabels:
      app: commandservice
  template: # defining pod and container that we are going to use 'what we are deploying'
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
        - name: commandservice # - : for specifying array
          image: bbb3/commandservice:latest
          

--- # seperate the deployment from cluster ip config
apiVersion: v1
kind: Service
metadata:
  name: commands-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: commandservice
  ports:
  - name: commandservice
    protocol: TCP
    port: 80
    targetPort: 80
