K8S/ingress-srv.yaml
# routing file that ingress-nginx controller is going to use to determine how to route to our services
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: acme.com # host should not be localhost or an ip address instead it should be a proper domain name later we'll update our localhost file to reflect acme.com 'redirects localhost to acme.com'
      http:
        paths:
          - path: /api/platforms
            pathType: Prefix
            backend:
              service:
                name: platforms-clusterip-srv
                port:
                  number: 80
          - path: /api/c/platforms
            pathType: Prefix
            backend:
              service:
                name: commands-clusterip-srv
                port: 
                  number: 80
